refactor and add new logging handler
